Startin' multiple file upload

--- a/resources/views/auth/signin.twig
+++ b/resources/views/auth/signin.twig
@@ -6,10 +6,10 @@
       <div class="panel panel-default">
         <div class="panel-heading"><strong>Sign in</strong></div>
         <div class="panel-body">
-          
+
           <form class="form-signin" action="{{path_for('auth.signin')}}" method="post">
             <div class="form-group">
-              <label for="email">Email address:</label>
+              <label for="email">Adresse Email:</label>
               <input type="email" name="email" class="form-control" id="email" placeholder="your@domain.com">
             </div>
             <div class="form-group">
