--- a/resources/views/auth/signin.html.twig
+++ b/resources/views/auth/signin.html.twig
@@ -1,7 +1,6 @@
-{% extends 'templates/app.twig' %}
+{% extends 'templates/app.html.twig' %}
 
 {%block content%}
-  <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default">
         <div class="panel-heading"><strong>Sign in</strong></div>
@@ -21,5 +20,4 @@
         </div>
       </div>
     </div>
-  </div>
 {% endblock %}
