--- a/resources/views/auth/signup.html.twig
+++ b/resources/views/auth/signup.html.twig
@@ -1,8 +1,8 @@
-{% extends 'templates/app.twig' %}
+{% extends 'templates/app.html.twig' %}
 
 {%block content%}
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
+
+    <div class="col-md-6 col-lg-offset-3">
       <div class="panel panel-default">
         <div class="panel-heading"><strong>Inscription</strong></div>
         <div class="panel-body">
@@ -47,5 +47,4 @@
         </div>
       </div>
     </div>
-  </div>
 {% endblock %}
