--- a/resources/views/auth/signin.html.twig
+++ b/resources/views/auth/signin.html.twig
@@ -16,7 +16,7 @@
               <input type="password" name="password" class="form-control" id="pwd">
             </div>
             <button type="submit" class="btn btn-primary">Se connecter</button>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" style="font-size:0.8em;">Mot de passe Oublié?</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{path_for('auth.forgot-password')}}" style="font-size:0.8em;">Mot de passe Oublié?</a>
           </form>
         </div>
       </div>
