--- a/resources/views/templates/app.html.twig
+++ b/resources/views/templates/app.html.twig
@@ -22,13 +22,12 @@
               {% if type == "admin" %}
                 <li><a href="{{path_for('admin.dashboard')}}">Dashboard</a></li>
                 <li><a href="{{path_for('admin.users')}}">Gestion des utilisateurs</a></li>
-                <li><a href="#">Traçabilité</a></li>
+                <li><a href="{{path_for('admin.logs')}}">Traçabilité</a></li>
               {% else %}
                 {% if type == "construire" %}
                   <li><a href="{{path_for('demande.user')}}">Compléter vos informations</a></li>
                 {% endif %}
                 <li><a href="{{path_for('demande.test')}}">Dossier En ligne</a></li>
-                <!-- <li><a href="{{path_for('demande.test2',{'id': id,'type':type}) }}">test</a></li> -->
                 <li><a href="{{path_for('demande.submit')}}">Soumettre votre dossier</a></li>
               {% endif %}
             </ul>
